@@ -1,3 +1,12 @@
+2025-12-28  Karl Berry  <karl@freefriends.org>
+
+	* tests/nested-range-test.pl: for more debuggin, show all
+	processes when output .ind doesn't exist; still mysteriously not
+	existing after successful run.
+
+	* Makefile.am,
+	* tests/nest.test: doc/svn tweaks.
+
 2025-12-21  Karl Berry  <karl@freefriends.org>
 
 	* tests/nested-range-test.pl: output .ind still not existing
